--- a/tblf.1
+++ b/tblf.1
@@ -10,6 +10,8 @@
 .Op Ar file
 .Sh DESCRIPTION
 Prints a formatted version of the input table to stdout. Short values are padded, and delimiters replaced with double spaces.
+.Nm tblf
+assumes all input to be UTF-8 or US-ASCII encoded.
 .Bl -tag -width Ds
 .It Fl d Ar delimiter
 Use
