--- a/tblf.1
+++ b/tblf.1
@@ -7,7 +7,7 @@
 .Nm tblf
 .Op Fl lnrz
 .Op Fl d Ar delimiter
-.Op Ar file
+.Ar file
 .Sh DESCRIPTION
 Prints a formatted version of the input table to stdout. Short values are padded, and delimiters replaced with double spaces.
 .Nm tblf
